# omnishell

./: .gitignore  README.md  app.ts  meson.build  package.json  tsconfig.json  wrapper.sh
styles/: _bar.scss  _colors.scss  _mixins.scss  _widgets.scss  main.scss
utils/: brightness.ts  icons.ts  index.ts  screen-record.ts
widgets/: _status.scss  _value-slider.scss  modules-left.tsx  modules-right.tsx  status.tsx  value-slider.tsx
widgets/modules/: _audio.scss  _hyprland.scss  _screenrec.scss  _system.scss  _time.scss  _tray.scss  audio.tsx  hyprland.tsx  privacy.tsx  screen-rec.tsx  system.tsx  time.tsx  tray.tsx
widgets/popovers/: _quick-settings.scss  media-panel.tsx
widgets/popovers/quick-settings/: _bluetooth.scss  _main.scss  _wifi.scss  bluetooth.tsx  common.tsx  index.tsx  power-profile.tsx  wifi.tsx
widgets/windows/: _bar.scss  _notification-center.scss  _notifications.scss  bar.tsx  launcher.tsx  notification-center.tsx  notifications.tsx
